# edfhcbezl

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
scripts/: load_data.py
src/movieapi/: app.py  constants.py  db_core.py  db_tables.py  models.py  schemas.py  services.py
src/movieapi/routers/: chat.py  movies.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_services_ops.py
tests/unit/: test_data_loading_ops.py
