[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name ="movieapi"
version = "0.1.0"
description = "API for MovieLens dataset"

requires-python = ">=3.11"

dependencies = [
    "fastapi==0.119.1",
    "sqlalchemy==2.0.44",
    "uvicorn==0.38.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "tox",
    "commitizen"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--strict-markers -ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test"]